--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
     name="description"
-    content="Online Covid help line"
+    content="Raise a Patient Request for covid-19 Service or Register as a volunteer and start helping people who are in need of covid services ."
     />
+    <link rel="canonical" href="http://covidassistindia.in/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/clogo.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="index, follow"> 
+    <meta name="keywords" content="Covid-19 Help Line, Covid-19 Resources, Covid-19 Volunteer Registration, Carona, Covid-19 Leads " /> 
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Covid Assist India</title>
+    <title>Covid Assist India - Help a Needy </title>
 
   </head>
   <body>
